--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: "Minimal testing with maximum benefit"
 logo: 120x120.gif
 teaser: 400x250.gif
 locale: en_US
-url: "https://dfox.github.io"
+url: "https://graybox-testing.org"
 feed:
   path: atom.xml
 
