--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site wide configuration
 
-title: "Graybox Testing"
+title: "Gray Box Testing"
 description: "Minimal testing with maximum benefit"
 logo: 120x120.gif
 teaser: 400x250.gif
